--- a/M02_introprogramación/Practica.ipynb
+++ b/M02_introprogramación/Practica.ipynb
@@ -44,12 +44,15 @@
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "print('Hola Mundo!')\n",
     "a = 20\n",
     "while a > 0:\n",
     "    \n",
     "    print(a)\n",
-    "    a -= 1"
+    "    a -= 1\n",
+    "    time.sleep(0.5) # añade un retraso de 500 ms"
    ]
   }
  ],
@@ -69,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
