--- a/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
+++ b/M04_flujosdecontrol/Prep_Course_Homework_04.ipynb
@@ -18,10 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El número es mayor que cero.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_entero = 5\n",
+    "if numero_entero > 0:\n",
+    "    print(\"El número es mayor que cero.\")\n",
+    "elif numero_entero < 0:\n",
+    "    print(\"El número es menor que cero.\")\n",
+    "else:\n",
+    "    print(\"El número es igual a cero.\")"
+   ]
   },
   {
    "attachments": {},
@@ -33,10 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las variables son de tipos diferentes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable1 = 5\n",
+    "variable2 = \"Hola\"\n",
+    "if type(variable1) == type(variable2):\n",
+    "    print(\"Las variables son del mismo tipo de dato.\")\n",
+    "else:\n",
+    "    print(\"Las variables son de tipos diferentes.\")"
+   ]
   },
   {
    "attachments": {},
@@ -48,10 +79,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 es impar.\n",
+      "2 es par.\n",
+      "3 es impar.\n",
+      "4 es par.\n",
+      "5 es impar.\n",
+      "6 es par.\n",
+      "7 es impar.\n",
+      "8 es par.\n",
+      "9 es impar.\n",
+      "10 es par.\n",
+      "11 es impar.\n",
+      "12 es par.\n",
+      "13 es impar.\n",
+      "14 es par.\n",
+      "15 es impar.\n",
+      "16 es par.\n",
+      "17 es impar.\n",
+      "18 es par.\n",
+      "19 es impar.\n",
+      "20 es par.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 21):\n",
+    "    if i % 2 == 0:\n",
+    "        print(f\"{i} es par.\")\n",
+    "    else:\n",
+    "        print(f\"{i} es impar.\")"
+   ]
   },
   {
    "attachments": {},
@@ -63,10 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 elevado a la potencia 3 es 0.\n",
+      "1 elevado a la potencia 3 es 1.\n",
+      "2 elevado a la potencia 3 es 8.\n",
+      "3 elevado a la potencia 3 es 27.\n",
+      "4 elevado a la potencia 3 es 64.\n",
+      "5 elevado a la potencia 3 es 125.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):\n",
+    "    print(f\"{i} elevado a la potencia 3 es {i**3}.\")"
+   ]
   },
   {
    "attachments": {},
@@ -78,10 +158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteración.\n",
+      "Iteración.\n",
+      "Iteración.\n",
+      "Iteración.\n",
+      "Iteración.\n",
+      "Iteración.\n",
+      "Iteración.\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_entero = 7\n",
+    "for _ in range(numero_entero):\n",
+    "    print(\"Iteración.\")"
+   ]
   },
   {
    "attachments": {},
@@ -93,10 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El factorial es: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_factorial = 5\n",
+    "if (numero_factorial > 0 and (type(numero_factorial) == int)):\n",
+    "    factorial = 1\n",
+    "    while numero_factorial > 0:\n",
+    "        factorial *= numero_factorial\n",
+    "        numero_factorial -= 1\n",
+    "    print(f\"El factorial es: {factorial}\")\n",
+    "else:\n",
+    "    print(f'La variable no puede usarse como factorial')"
+   ]
   },
   {
    "attachments": {},
@@ -108,10 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contador: 0, i: 0\n",
+      "Contador: 0, i: 1\n",
+      "Contador: 0, i: 2\n",
+      "Contador: 1, i: 0\n",
+      "Contador: 1, i: 1\n",
+      "Contador: 1, i: 2\n",
+      "Contador: 2, i: 0\n",
+      "Contador: 2, i: 1\n",
+      "Contador: 2, i: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "contador = 0\n",
+    "while contador < 3:\n",
+    "    for i in range(3):\n",
+    "        print(f\"Contador: {contador}, i: {i}\")\n",
+    "    contador += 1"
+   ]
   },
   {
    "attachments": {},
@@ -123,10 +261,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contador: 0, i: 0\n",
+      "Contador: 1, i: 0\n",
+      "Contador: 2, i: 0\n",
+      "Contador: 0, i: 1\n",
+      "Contador: 1, i: 1\n",
+      "Contador: 2, i: 1\n",
+      "Contador: 0, i: 2\n",
+      "Contador: 1, i: 2\n",
+      "Contador: 2, i: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    contador = 0\n",
+    "    while contador < 3:\n",
+    "        print(f\"Contador: {contador}, i: {i}\")\n",
+    "        contador += 1"
+   ]
   },
   {
    "attachments": {},
@@ -138,10 +298,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(2, 31):\n",
+    "    es_primo = True\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            es_primo = False\n",
+    "            break\n",
+    "    if es_primo:\n",
+    "        print(num)"
+   ]
   },
   {
    "attachments": {},
@@ -153,10 +339,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(2, 31):\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(num)"
+   ]
   },
   {
    "attachments": {},
@@ -168,10 +378,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# La optimización se basa en eliminar una variable booleana y una condición dentro del bucle, \n",
+    "#        lo que reduce la cantidad de operaciones\n",
+    "#         y hace que el código sea más claro y eficiente."
+   ]
   },
   {
    "attachments": {},
@@ -183,10 +397,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108\n",
+      "120\n",
+      "132\n",
+      "144\n",
+      "156\n",
+      "168\n",
+      "180\n",
+      "192\n",
+      "204\n",
+      "216\n",
+      "228\n",
+      "240\n",
+      "252\n",
+      "264\n",
+      "276\n",
+      "288\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 100\n",
+    "while numero <= 300:\n",
+    "    numero += 1\n",
+    "    if numero % 12 != 0:\n",
+    "        continue\n",
+    "        \n",
+    "    print(numero)\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -198,10 +445,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es primo.\n",
+      "Es primo.\n",
+      "Es primo.\n",
+      "No es primo.\n",
+      "No es primo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def es_primo(num):\n",
+    "    for i in range(2, num):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "while True:\n",
+    "    entrada = input(\"Ingrese un número (o 'q' para salir): \")\n",
+    "    if entrada == 'q':\n",
+    "        break\n",
+    "    try:\n",
+    "        numero = int(entrada)\n",
+    "        if es_primo(numero):\n",
+    "            print(\"Es primo.\")\n",
+    "        else:\n",
+    "            print(\"No es primo.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Entrada inválida. Por favor, ingrese un número válido.\")"
+   ]
   },
   {
    "attachments": {},
@@ -213,10 +491,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El primer número divisible por 3 y múltiplo de 6 es: 102\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = 100\n",
+    "while numero <= 300:\n",
+    "    if numero % 3 == 0 and numero % 6 == 0:\n",
+    "        print(f\"El primer número divisible por 3 y múltiplo de 6 es: {numero}\")\n",
+    "        break\n",
+    "    numero += 1"
+   ]
   }
  ],
  "metadata": {
@@ -238,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
